--- a/assets/css/SierraDevCSSDark.css
+++ b/assets/css/SierraDevCSSDark.css
@@ -2128,12 +2128,10 @@
 }
 
 .mode-text {
-	color: #fff !important
+	color: #000 !important
 }
 
-.mode-text {
-	color: #fff !important
-}
+
 
 
 .white-text {
