--- a/assets/css/SierraDevCSS.css
+++ b/assets/css/SierraDevCSS.css
@@ -5411,7 +5411,7 @@ button.btn-floating {
 }
 
 .dropdown-content {
-	background-color: #fff;
+	background-color: #424242;
 	margin: 0;
 	display: none;
 	min-width: 100px;
