--- a/assets/css/SierraDevCSS.css
+++ b/assets/css/SierraDevCSS.css
@@ -2945,7 +2945,7 @@
   .page-footer {
 	padding-top: 20px;
 	color: #fff;
-	background-color: #ee6e73;
+	background-color: #212121;
   }
   
   .page-footer .footer-copyright {
