--- a/assets/css/SierraDevCSS.css
+++ b/assets/css/SierraDevCSS.css
@@ -2955,10 +2955,10 @@
 	display: -webkit-flex;
 	display: -ms-flexbox;
 	display: flex;
-	-webkit-box-align: center;
-	-webkit-align-items: center;
-		-ms-flex-align: center;
-			align-items: center;
+	-webkit-box-align: bottom;
+	-webkit-align-items: bottom;
+		-ms-flex-align: bottom;
+			align-items: bottom;
 	-webkit-box-pack: justify;
 	-webkit-justify-content: space-between;
 		-ms-flex-pack: justify;
