--- a/assets/css/SierraDevCSS.css
+++ b/assets/css/SierraDevCSS.css
@@ -4461,13 +4461,13 @@
   }
   
   .navbar-fixed {
-	position: relative;
+	position: sticky;
 	height: 56px;
 	z-index: 997;
   }
   
   .navbar-fixed nav {
-	position: fixed;
+	position: sticky;
   }
   
   @media only screen and (min-width: 601px) {
