--- a/assets/css/SierraDevCSS.css
+++ b/assets/css/SierraDevCSS.css
@@ -4272,7 +4272,7 @@
 	color: #fff;
 	background-color: #ee6e73;
 	width: 100%;
-	height: 56px;
+	height: 10px;
 	line-height: 56px;
   }
   
@@ -4286,7 +4286,7 @@
   }
   
   nav.nav-extended .nav-content {
-	position: relative;
+	position: sticky;
 	line-height: normal;
   }
   
@@ -4304,7 +4304,7 @@
   }
   
   nav .nav-wrapper {
-	position: relative;
+	position: sticky;
 	height: 100%;
   }
   
