--- a/assets/css/SierraDevCSS.css
+++ b/assets/css/SierraDevCSS.css
@@ -1,4 +1,7 @@
-/*! * Materialize v1.0.0-beta (http://materializecss.com) * Copyright 2014-2017 Materialize * MIT License (https://raw.githubusercontent.com/Dogfalo/materialize/master/LICENSE) */
+/*!
+ * SierraDev9285 JS v1.0.0 
+ * Copyright 2019-2019 SierraDev9285
+ */
 .materialize-red{
 	background-color:#e51c23 !important
 }
